# ti-docs-mcp

./: CHANGELOG.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  RAG_STRATEGY.md  README.md  SPECS_REVIEW.md  config.yaml  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml  pypi-publish.yml
.specify/memory/: analyze.md  clarify.md  constitution.md  plan.md  spec.md  tasks.md
src/ti_docs_mcp/: __init__.py  cli.py  embeddings.py  index.py  ingest.py  pdf_parser.py  rag.py  server.py
tests/: RAG_TEST_STRATEGY.md  README.md  TEST_SETUP_SUMMARY.md  __init__.py  conftest.py  test_server.py  test_tools.py
